tests/profile/error/module/wrongtype_loadedInstruction.profile
{
  "version": { "major": 1, "minor": 0 },
  "modules": [
    {
      "name": "jkl-module",
      "loadedInstruction": 1.0,
      "notLoadedInstruction": "not_instr"
    }
  ]
}
